# Hospital-Management-System-

./: AppointmentsWindow.ui  CMakeLists.txt  README.md  admindashboard.cpp  admindashboard.h  admindashboard.ui  admindashboarddoctor.cpp  admindashboarddoctor.h  admindashboarddoctor.ui  admindashboardpatient.cpp  admindashboardpatient.h  admindashboardpatient.ui  adminlogindialog.cpp  adminlogindialog.h  adminlogindialog.ui  appointmentswindow.cpp  appointmentswindow.h  doctordashboard.cpp  doctordashboard.h  doctordashboard.ui  doctordashboardsalary.cpp  doctordashboardsalary.h  doctordashboardsalary.ui  doctordashboardtodayswork.cpp  doctordashboardtodayswork.h  doctordashboardtodayswork.ui  doctorlogindialog.cpp  doctorlogindialog.h  doctorlogindialog.ui  doctorreportsdialog.cpp  doctorreportsdialog.h  doctorreportsdialog.ui  employeedashboard.cpp  employeedashboard.h  employeedashboard.ui  employeelogindialog.cpp  employeelogindialog.h  employeelogindialog.ui  main.cpp  mainwindow.cpp  (+26 more)
